# mppi-cpp

./: .gitignore  CMakeLists.txt  README.md  mppi.cc
assets/: g1_8dof_mjx_sphere.xml  g1_8dof_mjx_sphere_position.xml
devel/rs.cpp/: rs.cpp
devel/rs.cpp/checkpoint/: cheetah_0_1848_40  cheetah_0_562_498  cheetah_1_1881_467  cheetah_1_2166_344  cheetah_2_2427_48  cheetah_2_2623_543  cheetah_3_2521_807  cheetah_3_2559_203  cheetah_4_2619_177  cheetah_4_2670_626  cheetah_5_2675_606  cheetah_5_3202_841  cheetah_6_2543_912  cheetah_6_3118_823  cheetah_7_2810_958  cheetah_7_2835_1265  cheetah_8_2949_993  cheetah_8_3019_1274  cheetah_9_2980_984  cheetah_9_2985_1479  humanoid_0_505_16
devel/sample/: CMakeLists.txt  README.md
devel/sample/assets/: g1_8dof_mjx_capsule.xml
